# smol

./: .env.default  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  swagger.yaml
.github/workflows/: release.yml  rust.yml
migrations/2020-04-06-233436_create_links/: up.sql
migrations/2024-07-18-204708_increase_link_size/: down.sql  up.sql
migrations/2025-07-05-230339_increase_link_size_again/: down.sql  up.sql
src/: endpoint_admin.rs  endpoint_api_link_info.rs  endpoint_favicon.rs  endpoint_index.rs  main.rs  models.rs  schema.rs
static/: main.css
templates/: admin.html  base_template.html  index.html  login.html
