[package]
name = "smol"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-rt = "2.10.0"
actix-files = "0.6.6"
actix-identity = "0.7.1"
actix-session = {version = "0.9.0", features = ["cookie-session"]}
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4.38"
diesel = { version = "2.2.1", features = ["r2d2", "mysql", "chrono"] }
diesel_migrations = "2.2.0"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
http = "1.1.0"
askama = "0.12.1"
uuid = { version = "1.11.0", features = ["v4"] }

