[package]
name = "smol"
version = "0.1.0"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.11.0"
actix-rt = "=2.10.0"
actix-files = "=0.6.6"
actix-identity = "=0.8.0"
actix-session = {version = "=0.10.1", features = ["cookie-session"]}
rand = "=0.9.2"
serde = { version = "=1.0.219", features = ["derive"] }
dotenv = "=0.15.0"
chrono = "=0.4.41"
diesel = { version = "=2.2.11", features = ["r2d2", "mysql", "chrono"] }
diesel_migrations = "=2.2.0"
#log = "0.4.22"
tracing = { version = "=0.1.41", features = ["log"] }
#tracing-futures = "0.2.5"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
url = "=2.5.4"
#http = "1.1.0"
askama = "=0.14.0"
uuid = { version = "=1.17.0", features = ["v4"] }

