[package]
name = "smol"
version = "0.1.5"
authors = ["CUB3D <callumthom11@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "=4.12.1"
actix-rt = "=2.11.0"
actix-files = "=0.6.9"
actix-identity = "=0.9.0"
actix-session = {version = "=0.11.0", features = ["cookie-session"]}
rand = "=0.9.1"
serde = { version = "=1.0.228", features = ["derive"] }
dotenv = "=0.15.0"
chrono = "=0.4.43"
diesel = { version = "=2.3.5", features = ["r2d2", "mysql", "chrono"] }
diesel_migrations = "=2.3.1"
tracing = { version = "=0.1.44", features = ["log"] }
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }
url = "=2.5.8"
askama = "=0.15.1"
uuid = { version = "=1.21.0", features = ["v4"] }

